Document PPDG/src/objects/Breakthrough_Objective__c.object
<CustomObject>
    <description>For use in tracking transformation plan: March 2014</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Performance_Indicator_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Performance Indicator 1</label>
        <referenceTo>Risk__KRI__c</referenceTo>
        <relationshipLabel>Breakthrough Objectives</relationshipLabel>
        <relationshipName>Breakthrough_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Performance_Indicator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Performance Indicator 2</label>
        <referenceTo>Risk__KRI__c</referenceTo>
        <relationshipLabel>Breakthrough Objectives (Key Performance Indicator 2)</relationshipLabel>
        <relationshipName>Breakthrough_Objectives1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Performance_Indicator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Performance Indicator 3</label>
        <referenceTo>Risk__KRI__c</referenceTo>
        <relationshipLabel>Breakthrough Objectives (Key Performance Indicator 3)</relationshipLabel>
        <relationshipName>Breakthrough_Objectives2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_area_of_focus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related area of focus</label>
        <referenceTo>Area_of_focus__c</referenceTo>
        <relationshipLabel>Breakthrough Objectives</relationshipLabel>
        <relationshipName>Breakthrough_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Breakthrough Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Breakthrough_Objectives</fullName>
        <columns>NAME</columns>
        <columns>Key_Performance_Indicator_1__c</columns>
        <columns>Key_Performance_Indicator_2__c</columns>
        <columns>Key_Performance_Indicator_3__c</columns>
        <columns>Related_area_of_focus__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Current Breakthrough Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Breakthrough Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Breakthrough Objectives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>